--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       .card {
         max-width: 350px;
         padding: 40px;
+        margin-top: 100px;
       }
 
       .card__title {
@@ -190,7 +191,8 @@
         width: 100%;
         max-width: none;
         padding: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        margin-top: 20px;
       }
 
       .card__divider {
