--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
       .card {
         max-width: 350px;
         padding: 40px;
-        margin-top: 100px;
+        margin-top: 50px;
+        margin-bottom: 50px;
       }
 
       .card__title {
